# stancemining

./: .gitignore  .readthedocs.yaml  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
app/: compose.yaml
app/backend/: main.py  requirements.txt  tests.py
app/frontend/src/: App.js
app/frontend/src/components/PCAStreamplot/: PCAStreamplot.css  PCAStreamplot.js  index.js
app/frontend/src/components/TargetChart/: TargetChart.css  TargetChart.js
app/frontend/src/components/UmapVisualization/: UmapVisualization.js
app/frontend/src/contexts/: AuthContext.js  PrivateRoute.js
app/frontend/src/services/: api.js
config/: config_default.yaml
docs/: api.rst  conf.py  index.rst  install.rst  models.rst
examples/: basic_example.py  claims_pipeline_example.py  stance_detection_custom_model_example.py  stance_detection_zero_shot_model_example.py
experiments/: datasets.py  main.py  metrics.py
experiments/methods/: pacte.py  polar.py  wiba.py
experiments/scripts/: benchmark_gp_training.py  cluster_size_measures.py  compare_wiba_ec_targets.py  cosine_sim_ablation.py  draw_tables_plot_rank.py  eval_gps.py  eval_gps_alts.py  extract_comparisons.py  get_results.py  human_eval.py  main.py  metric_threshold_sensitivity.py  num_beam_ablation.py  plot_ablations.py  plot_gps_alts.py  plot_rank.py  plot_retrieval_sensitivity.py  plot_stance_var_threshold_tradeoff.py  test_model.py  test_vllm.py  topic_model.py  train_model.py  train_models.py  train_pacte.py  train_wiba.py  train_wiba_old.py  tuned_vs_base_target_gen.py  variance_retrieval_trade_off.py
models/prompts/: noun_phrase_aggregate_prompt.json  prompt_claim_entailment.txt  prompt_claim_entailment_2_way.txt  prompt_claim_entailment_4_way.txt  prompt_claim_entailment_7_way.txt  prompt_claim_extraction.txt  prompt_context_claim_entailment_2_way.txt  prompt_context_claim_entailment_4_way.txt  prompt_context_claim_entailment_5_way.txt  prompt_context_stance.txt  prompt_few_shot_claim_entailment_4_way.json  prompt_parent_claim_entailment.txt  prompt_parent_claim_entailment_2_way.txt  prompt_parent_claim_entailment_4_way.txt  prompt_parent_claim_entailment_5_way.txt  prompt_parent_claim_entailment_7_way.txt  prompt_parent_stance.txt  prompt_stance.txt  prompt_stance_target.txt  prompt_stance_target_list.txt
models/stancemining/: prompt_claim_entailment_5_way.txt
stancemining/: __init__.py  cli.py  datasets.py  estimate.py  finetune.py  llms.py  main.py  metrics.py  plot.py  prompting.py  utils.py
tests/: test_all.py  test_estimate.py  test_filter.py  test_integration.py  test_main.py  test_metrics.py  test_utils.py  test_vector_probs.py
tests/data/: active_bluesky_sample.csv  vast_sample_test.csv
vectopic/: __init__.py  finetune.py  llms.py  main.py  prompting.py
