[project]
name = "stancemining"
version = "0.2.0"
description = "A library for stance detection and target extraction in text data."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "cuml-cu12",
    "datasets>=3.3.2",
    "ninja>=1.11.1.4",
    "nltk>=3.9.1",
    "numpy<2.0.0",
    "packaging>=25.0",
    "pandas",
    "polars>=1.30.0",
    "pyarrow<21.0.0",
    "pytest>=8.4.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "sentence-transformers>=4.1.0",
    "toponymy",
    "torch",
    "torchvision",
    "tqdm>=4.67.1",
    "vllm>=0.7.0",
]

[project.optional-dependencies]
gps = [
    "pyro-ppl>=1.9.1",
    "gpytorch>=1.14",
]
training = [
    "evaluate>=0.4.3",
    "peft>=0.15.2",
    "sacrebleu>=2.5.1",
    "wandb>=0.20.1",
    "bert-score>=0.3.13",
]
plot = [
    "adjusttext>=1.3.0",
    "matplotlib>=3.10.3",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
docs-auto = [
    "sphinx-autobuild"
]
tests = [
    "pytest"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[tool.uv]
package = true

[tool.ruff]
select = ["F", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
